CloudFormation/JJTech.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: ''
Metadata: {}
Parameters:
  JJtechCidr:
    Description: provide a cidr for vpc
    Type: String
  SubnetParameter:
    Description: Provide a Private SN CidrBlock
    Type: String
  PrivSNAZ:
    Description: Pick AZ for your Private SubNet
    Type: String
  PubSNCidr:
    Description: Provide Public SN CidrBlock
    Type: String
  PublicSNAZ:
    Description: Provide Public SN AZ
    Type: String
  InstanceType:
    Description: Select EC2 Instance Type from Allow List
    Type: String
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
  AMI:
    Description: Input AMI id
    Type: String
  KeyPair:
    Description: Key pair for instance
    Type: String
Mappings: {}
Conditions: {}
Resources:
  JJTechVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref JJtechCidr
      Tags:
        - Key: Name
          Value: JJTechVPC
  IGWAyo:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: AyoInternetGW
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref JJTechVPC
      InternetGatewayId: !Ref IGWAyo
  JJPrivSN1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Ref PrivSNAZ
      VpcId: !Ref JJTechVPC
      CidrBlock: !Ref SubnetParameter
      Tags:
        - Key: Name
          Value: JJPrivateSN1
  JJTechPubSN:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Ref PublicSNAZ
      VpcId: !Ref JJTechVPC
      CidrBlock: !Ref PubSNCidr
      Tags:
        - Key: Name
          Value: JJTechPubSN
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref JJTechVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable
  PublicAsn:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref JJTechPubSN
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref JJTechVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable
  PrivateASSN:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref JJPrivSN1
      RouteTableId: !Ref PrivateRouteTable
  InternetRT:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGWAyo
  JJTechSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow SSH and HTTP Protocol from anywhere
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      VpcId: !Ref JJTechVPC
      Tags:
        - Key: Name
          Value: JJTechSG
  JJTechWebSrv:
    Type: 'AWS::EC2::Instance'
    Properties:
      KeyName: !Ref KeyPair
      ImageId: !Ref AMI
      InstanceType: !Ref InstanceType
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          GroupSet:
            - !Ref JJTechSG
          SubnetId: !Ref JJTechPubSN
      Tags:
        - Key: Name
          Value: JJTechWebSrv
      UserData: !Base64 
        'Fn::Join':
          - ''
          - - '#!/bin/bash'
            - sudo su
            - yum update -y
            - yum install httpd -y
            - chkconfig httpd on
            - cd /var/www/html
            - >-
              wget
              https://pipeline-bucket-me.s3.amazonaws.com/hotel-page-concept.zip
            - unzip hotel-page-concept.zip
            - mv hotel-page-concept/* .
            - service httpd start
  JJTechAppsrvr:
    Type: 'AWS::EC2::Instance'
    Properties:
      KeyName: !Ref KeyPair
      ImageId: !Ref AMI
      InstanceType: !Ref InstanceType
      SubnetId: !Ref JJTechPubSN
      SecurityGroupIds:
        - !Ref JJTechSG
      Tags:
        - Key: Name
          Value: JJTechAppSrvr
Outputs: {}
